

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="5dp"
    android:paddingBottom="15dp"
    android:stretchColumns="*"
     >

	<TableRow
       android:id="@+id/tableRow0"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       >

		<TextView
		    android:id="@+id/textView1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:gravity="center_vertical|center_horizontal"
		    android:text="Sign Up for Movie Reservation!"
		    android:textSize="20sp" />

   </TableRow>
   
   <TableRow android:id="@+id/tableRow1" 
      android:layout_height="wrap_content" 
      android:layout_width="match_parent">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingBottom="10dp"
           android:paddingTop="30dp"
           android:text="@string/name"
           android:textSize="18sp" />

   </TableRow>
   <TableRow android:id="@+id/tableRow2" 
      android:layout_height="wrap_content" 
      android:layout_width="match_parent">

       <EditText
           android:id="@+id/name"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_span="2"
           android:ems="10"
           android:hint="@string/enterName"
           android:imeOptions="actionNext"
           android:inputType="text"
           android:paddingBottom="5dp" >

           <requestFocus />
       </EditText>

   </TableRow>
   
   <TableRow android:id="@+id/tableRow4" 
      android:layout_height="wrap_content" 
      android:layout_width="match_parent">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingBottom="10dp"
           android:paddingTop="15dp"
           android:text="@string/email"
           android:textSize="18sp" />

   </TableRow>
   <TableRow android:id="@+id/tableRow5" 
      android:layout_height="wrap_content" 
      android:layout_width="match_parent">

       <EditText
           android:id="@+id/enterEmail"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_span="2"
           android:ems="10"
           android:hint="@string/loginEmail"
           android:imeOptions="actionNext"
           android:inputType="textEmailAddress" >

           <requestFocus />
       </EditText>

   </TableRow>
   
   <TableRow android:id="@+id/tableRow6" 
      android:layout_height="wrap_content" 
      android:layout_width="match_parent">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="10dp"
          android:paddingTop="15dp"
          android:text="@string/password"
          android:textSize="18sp" />

   </TableRow>
   <TableRow android:id="@+id/tableRow7" 
      android:layout_height="wrap_content" 
      android:layout_width="match_parent">

      <EditText
          android:id="@+id/enterPassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_span="2"
          android:hint="@string/loginPassword"
          android:imeOptions="actionNext"
          android:inputType="textPassword"
          android:paddingBottom="10dp" >

      </EditText>
   </TableRow>
   
   <TableRow android:id="@+id/tableRow8" 
      android:layout_height="wrap_content" 
      android:layout_width="match_parent">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="10dp"
          android:paddingTop="15dp"
          android:text="@string/confirmPassword"
          android:textSize="18sp" />

   </TableRow>
   <TableRow android:id="@+id/tableRow9" 
      android:layout_height="wrap_content" 
      android:layout_width="match_parent">
      <EditText android:layout_width="match_parent" 
         android:layout_height="wrap_content" android:layout_span="2" 
         android:inputType="textPassword" android:id="@+id/confirmPassword"  
         android:hint="@string/confirmPassword" 
         android:imeOptions="actionNext">
      </EditText>
   </TableRow>

   <TableRow
       android:id="@+id/tableRow10"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" 
       android:gravity="center">

      <Button
          android:id="@+id/signUpButton1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:onClick="returnAction"
          android:text="@string/signUpButton"
          android:width="200dp" >
</Button>
   </TableRow>

</TableLayout>